--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ hr {
 }
 
 .landing-image {
-  background-image: url("../assets/eyestudyupdate.png");
+  background-image: url("../assets/eyestudyupdatesmall.png");
   filter: blur(12px);
   -webkit-filter: blur(12px);
   height: 99%;
@@ -109,7 +109,7 @@ hr {
 }
 
 .art {
-  background-image: url("../assets/eyestudyupdate.png");
+  background-image: url("../assets/eyestudyupdatesmall.png");
   background-size: cover;
   background-position: center;
   display: block;
